# Anton

./: .gitignore  Dockerfile  README.md  TODO  main.py  pyproject.toml  requirements.txt
.github/actions/arm64-build/: Dockerfile  action.yml
.github/workflows/: build_arm.yml  build_win.yml  test.yml
anton/: Anton.log.1  main.py
anton/tests/: .coveragerc  test_database.py  test_weatherapp_endpoints.py
anton/utils/: common.py  database.py  logger.py  static.py
anton/weatherapp/core/: core.py
anton/weatherapp/endpoints/: __init__.py  endpoints.py
anton/weatherapp/models/: location_model.py  weather_forecast_current_model.py  weather_forecast_daily_model.py  weather_forecast_hourly_model.py  weather_forecast_model.py
scripts/: before_merge.bat  build_ARM64.sh  build_win.bat  lint.sh  test.sh
src/: common.py  database.py  logger.py  static.py
src/weatherapp/core/: __init__.py  core.py
src/weatherapp/endpoints/: __init__.py  endpoints.py
src/weatherapp/models/: locationModel.py  weatherForecastCurrentModel.py  weatherForecastHourlyModel.py  weatherForecastModel.py  weatherPredictionCurrentModel.py  weatherPredictionDailyModel.py  weatherPredictionHourlyModel.py  weatherPredictionModel.py  weather_forecast_daily_model.py
tests/: test_database.py
