[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "anton"
authors = [{name = "uncodegama", email = "unculkodegama@yahoo.com"}]
readme = "README.md"
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
requires-python = ">=3.9, <4"
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/uncodegama/Anton"

[requires]

