[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "anton"
version = "1.0.0"
description = """Unintuitive and unintelligent home assistant"""
authors = [{ name = "uncodegama", email = "unculkodegama@yahoo.com" }]
readme = "README.md"
requires-python = ">=3.9, <4"

classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Private :: Do Not Upload",
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP"
]

dependencies = [
    "anyio==3.3.4",
    "asgiref==3.4.1",
    "atomicwrites==1.4.0",
    "attrs==21.2.0",
    "certifi==2021.10.8",
    "charset-normalizer==2.0.7",
    "click==8.0.3",
    "colorama==0.4.4",
    "docutils==0.18",
    "fastapi==0.70.0",
    "flit==3.4.0",
    "flit-core==3.4.0",
    "greenlet==1.1.2",
    "h11==0.12.0",
    "idna==3.3",
    "iniconfig==1.1.1",
    "packaging==21.2",
    "pluggy==1.0.0",
    "py==1.11.0",
    "pydantic==1.8.2",
    "pyparsing==2.4.7",
    "requests==2.26.0",
    "sniffio==1.2.0",
    "SQLAlchemy==1.4.26",
    "starlette==0.16.0",
    "toml==0.10.2",
    "tomli==1.2.2",
    "tomli-w==0.4.0",
    "typing-extensions==3.10.0.2",
    "urllib3==1.26.7",
    "uvicorn==0.15.0"
]

[project.optional-dependencies]
test = [
    "pytest==6.2.5",
    "pytest-cov",
]


[project.urls]
Home = "https://github.com/uncodegama/Anton"




