[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project.urls]
Home = "https://github.com/uncodegama/Anton"

[project]
name = "anton"
version = "1.0.0"
description = """Unintuitive and unintelligent home assistant"""
authors = [{ name = "uncodegama", email = "unculkodegama@yahoo.com" }]
readme = "README.md"
requires-python = ">=3.9, <4"

classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Private :: Do Not Upload",
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP"
]

dependencies = [
    "anyio==3.3.4",
    "asgiref==3.4.1",
    "atomicwrites==1.4.0",
    "attrs==21.2.0",
    "certifi==2021.10.8",
    "charset-normalizer==2.0.7",
    "click==8.0.3",
    "colorama==0.4.4",
    "docutils==0.18",
    "fastapi==0.70.0",
    "flit==3.4.0",
    "flit-core==3.4.0",
    "greenlet==1.1.2",
    "h11==0.12.0",
    "idna==3.3",
    "iniconfig==1.1.1",
    "packaging==21.2",
    "pluggy==1.0.0",
    "py==1.11.0",
    "pydantic==1.8.2",
    "pyparsing==2.4.7",
    "requests==2.26.0",
    "sniffio==1.2.0",
    "SQLAlchemy==1.4.26",
    "starlette==0.16.0",
    "toml==0.10.2",
    "tomli==1.2.2",
    "tomli-w==0.4.0",
    "typing-extensions==3.10.0.2",
    "urllib3==1.26.7",
    "uvicorn==0.15.0"
]

[project.optional-dependencies]
test = [
    "pytest==6.2.5",
    "pytest-cov >=2.12.0,<4.0.0",
    "isort>=5.10.1,<6.0.0",
    "pytest-order==1.0.0",
    "flake8>=3.8.3,<4.0.0",
    "black==21.9b0",
    "mypy==0.910",

    # types
    "types-ujson==4.2.0",
    "types-orjson==3.6.1",
    "types-toml==0.10.1",
    "types-requests==2.26.1",
    "types-atomicwrites==1.4.1",
    "types-setuptools==57.4.4",
]

build = [
    "altgraph==0.17.2",
    "future==0.18.2",
    "pefile==2021.9.3",
    "pyinstaller==4.7",
    "pyinstaller-hooks-contrib==2021.3",
    "pywin32-ctypes==0.2.0"
]

[tool.mypy]
python_version = "3.9"
disallow_subclassing_any = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = true
strict_equality = true
ignore_missing_imports = true

[tool.isort]
profile = "black"

[tool.coverage.report]
omit = [
    "anton/utils/constants.py",
    ]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]
log_file = "./tests/pytest-logs.txt"
log_cli = true




